web.xml修改 廖泽松

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -44,7 +44,7 @@
 
     <servlet-mapping>
         <servlet-name>gof</servlet-name>
-        <url-pattern>/gof/*</url-pattern>
+        <url-pattern>*.do</url-pattern>
     </servlet-mapping>
 
 
