--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -46,6 +46,11 @@
         <servlet-name>gof</servlet-name>
         <url-pattern>*.do</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>gof</servlet-name>
+        <url-pattern>*.action</url-pattern>
+    </servlet-mapping>
+
 
 
 </web-app>
