--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -67,5 +67,8 @@
         <url-pattern>*.action</url-pattern>
     </servlet-mapping>
 
+    <welcome-file-list>
+        <welcome-file>index.action</welcome-file>
+    </welcome-file-list>
 
 </web-app>
